2003-11-26 23:55  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-sendEvent:): Ignore most events sent to
	windows that have been ordered out.
	* Source/NSPanel.m (-sendEvent:): Synchronize with [NSWindow
	-sendEvent:].

2003-11-26 23:54  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSView.m (-autoscroll:): Document.

2003-11-26 15:00  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSGuiPrivate.h: Fix GSGuiBundle() prototype.

2003-11-26 14:47  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSApplication.h: Add -_windowWillDealloc:.
	* Source/NSApplication.m: Fix some prototypes.
	(-_windowWillDealloc:): Implement.
	* Source/NSWindow.m (-dealloc): Call -_windowWillDealloc: so NSApp
	can clear any unretained references to the window.

2003-11-25 17:16  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-orderWindow:relativeTo:): Start the window
	auto-display performer when a window is ordered in regardless of
	whether it needs display right now or not.

2003-11-23  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.1

2003-11-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m (-tile) corrected computation of columnCount,
	so that at least one column gets diplayed, even when this is
	smaller than the minColumnwidth. 
	* Source/NSMatrix.m (-drawRect:) corrected clipping of row2, here
	row1 had been tested. 
	* Source/NSScrollView.m (-drawRect:) removed the saving of the context.
	
2003-11-22 15:07  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSNibTemplates.m ([GSNibContainer -awakeWithContext:]):
	Don't release connections when enumerating them; they're owned
	by the array. Partial fix for bug #6354.

2003-11-19 21:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-sizeToFit): If we are horizontally resizable
	and the inset width is 0, increase our width by 1.

2003-11-19 17:06  Alexander Malmberg <alexander@malmberg.org>
